# MCP-register

./: .gitignore  Dockerfile  README.md  pyproject.toml
.codex/: config.toml
config/: config.yaml
docs/: case.md  client_example.py  mcp-clients.md  ncm_demo.json  roteiro-video.md  validate_mcp_clients.py
src/mcp_crm/: __init__.py
src/mcp_crm/drivers/: __init__.py  mcp_server.py
src/mcp_crm/shared/: __init__.py  faiss_import.py
src/mcp_crm/slices/: __init__.py
src/mcp_crm/slices/users/: __init__.py
src/mcp_crm/slices/users/application/: __init__.py  crm_assistant_service.py  ports.py  user_service.py
src/mcp_crm/slices/users/domain/: __init__.py  errors.py  user.py
src/mcp_crm/slices/users/infrastructure/: __init__.py  config.py  embeddings.py  faiss_store.py  json_bootstrap.py  llm.py  logging.py  sqlite_repository.py
tests/: support.py
tests/benchmarks/: benchmark_mcp_stdio.py  benchmark_search.py  evaluate_search_quality.py
tests/fixtures/: search_quality_cases.json
tests/integration/: test_import_safety.py  test_json_bootstrap.py  test_mcp_driver.py  test_mcp_server.py  test_persistence.py  test_sqlite_repository.py
tests/smoke/: test_docker_e2e.py  test_docker_runtime.py
tests/unit/: test_config_settings.py  test_crm_assistant_service.py  test_embeddings.py  test_user_service.py
