[project]
name = "mcp-crm"
version = "0.1.0"
description = "Servidor MCP com SQLite, embeddings persistidos e busca semantica"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp==3.1.1",
    "numpy>=2.1,<3",
    "polars>=1.20,<2",
    "pyarrow>=18,<21",
    "pyyaml>=6,<7",
    "sentence-transformers>=5.1,<6",
]

[project.optional-dependencies]
dev = ["pytest>=8.3,<9", "pytest-asyncio>=0.24,<1", "ruff>=0.12,<0.13"]

[project.scripts]
mcp-crm = "mcp_crm.drivers.mcp_server:main"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_crm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = ["smoke: exercises Docker build and runtime persistence"]

[tool.ruff]
line-length = 100
target-version = "py312"
